--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^16.0.1"
+    "eslint": "^8.3.0"
   },
   "dependencies": {
+    "electron": "^16.0.1",
     "edit-json-file": "^1.6.2",
     "electron-json-storage": "^4.5.0",
     "scraper-instagram": "^1.0.17",
